# bazel-grpc-java-win-repro

./: BUILD.bazel  README.md  WORKSPACE  a.proto  b.proto  c.proto
